# nmos-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  permissions.example.yaml  pyproject.toml
src/nmos_mcp/: __init__.py  auth.py  config.py  connection.py  discovery.py  errors.py  http.py  matrix.py  models.py  permissions.py  query.py  server.py
tests/: conftest.py  test_connection.py  test_discovery.py  test_matrix.py  test_permissions.py  test_query.py
